# lingmo-installer-firstboot

./: CMakeLists.txt  OobeWindow.cpp  OobeWindow.h  README.md  README.zh_CN.md  firstboot.service  lingmo-oobe.rules  main.cpp  oobe.desktop  oobe.sh
.github/workflows/: upload.yml
debian/: changelog  control  copyright  install  lingmo-oobe.lintian-overrides  rules
translations/: lingmo-oobe_zh_CN.ts
wayland-sessions/: lingmo-oobe.desktop
xsessions/: lingmo-oobe.desktop
